# bc-aidev

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_EN.md  SECURITY.md  requirements.txt
.devcontainer/: Dockerfile
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_improvement.md  feature_request.md  question.md
_docs/: README.md
_scripts/: autocommit.sh  crontab.example  setup-autocommit.sh
_scripts/systemd/: autocommit.service  autocommit.timer
bootcamp/01-fundamentos/: README.md
bootcamp/01-fundamentos/week-02/: README.md  rubrica-evaluacion.md
bootcamp/01-fundamentos/week-03/: README.md
bootcamp/01-fundamentos/week-04/: README.md  (+1 more)
bootcamp/02-machine-learning/: README.md
bootcamp/03-deep-learning/: README.md
bootcamp/04-especializacion/: README.md
bootcamp/05-proyecto-final/: README.md
bootcamp/week-01/: README.md  rubrica-evaluacion.md
bootcamp/week-03/: rubrica-evaluacion.md
bootcamp/week-04/3-proyecto/.solution/: pyproject.toml
bootcamp/week-04/3-proyecto/.solution/cli_utils/: __init__.py  cli.py  files.py  system.py  text.py
bootcamp/week-04/3-proyecto/starter/: README.md  pyproject.toml
bootcamp/week-04/3-proyecto/starter/cli_utils/: text.py
bootcamp/week-05/: README.md
bootcamp/week-06/: rubrica-evaluacion.md
bootcamp/week-07/: rubrica-evaluacion.md
bootcamp/week-08/: README.md  rubrica-evaluacion.md
bootcamp/week-09/: README.md
bootcamp/week-10/: README.md
bootcamp/week-11/: README.md
bootcamp/week-12/: README.md
(+686 files in other folders)
