[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli_utils"
version = "1.0.0"
description = "Utilidades de línea de comandos para el bootcamp"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "AI Bootcamp Student"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cli-utils = "cli_utils.cli:main"

[tool.setuptools.packages.find]
where = ["."]
